# bb

./: README.md  pyproject.toml
src/bb/: __init__.py  __main__.py  cli.py  git.py  openai.py
src/bb/commands/: __init__.py  branch_name.py  commit.py  description.py  pull_request.py
