[project]
name = "bb"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "yumazak", email = "12002113+yumazak@users.noreply.github.com" }
]
dependencies = [
    "openai>=1.36.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"bb" = "bb:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/bb"]
