[project]
name = "bb"
version = "0.1.0"
description = "bb is a tool that utilizes OpenAI's API (gpt-4o-mini) to automatically generate Git branch names and pull request descriptions based on user input and Git diff information."
authors = [
    { name = "yumazak", email = "12002113+yumazak@users.noreply.github.com" }
]
dependencies = [
    "openai>=1.36.0",
    "click>=8.1.7",
    "pyperclip>=1.9.0",
    "rich>=13.7.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"bb" = "bb:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/bb"]
